# vrm1-face-tracking

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/vrm/: README.md
crates/expression_adapter/: Cargo.toml  README.md
crates/expression_adapter/src/: lib.rs
crates/pose_adapter/: Cargo.toml  README.md
crates/pose_adapter/src/: lib.rs
crates/tracker_ipc/: Cargo.toml
crates/tracker_ipc/src/: lib.rs
crates/vrm_loader/: Cargo.toml  README.md
crates/vrm_loader/src/: extensions.rs  lib.rs  loader.rs  plugin.rs
src/: config.rs  live_expressions.rs  main.rs
tools/: README.md  mediapipe_tracker.py  requirements.txt
