[workspace]
resolver = "3"
members = ["crates/*", "."]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuge42/vrm1-face-tracking"
readme = "README.md"
authors = ["Asayu Yuge <243070221+yuge42@users.noreply.github.com>"]
description = "Face Tracking adapter for VRM models"

[workspace.dependencies]
bevy = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
rfd = "0.17"
directories = "6.0"
toml = "0.9"

[package]
name = "vrm1-face-tracking"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
tracker_ipc = { path = "crates/tracker_ipc" }
expression_adapter = { path = "crates/expression_adapter" }
vrm_loader = { path = "crates/vrm_loader" }
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }