[package]
name = "vrm_loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Minimal VRM 1.0 glTF parser for live face-tracking"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
